plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hongin'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.4.1'
	implementation 'com.github.jknack:handlebars:4.4.0'
	implementation 'com.github.jknack:handlebars-springmvc:4.4.0'
	implementation 'com.github.jknack:handlebars-guava-cache:4.4.0'
	implementation 'com.github.jknack:handlebars-helpers:4.4.0'
	implementation 'com.github.jknack:handlebars-humanize:4.3.1'
	implementation 'com.github.jknack:handlebars-jackson2:4.3.1'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
